--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,8 @@ environment:
   domain: "dockerlab.local"
   masterip: "10.10.10.11"
   base_box: "ubuntu/xenial64"
-  engine_version: "17.03.2~ce-0~ubuntu-xenial"
+  engine_version: "17.12.0~ce-0~ubuntu"
+  shared_mount: "/mnt/data"
 
 boxes:
 - name: "minio-1"
