--- a/config.yml
+++ b/config.yml
@@ -4,6 +4,8 @@ environment:
   base_box: "ubuntu/xenial64"
   engine_version: "17.12.0~ce-0~ubuntu"
   shared_mount: "/mnt/data"
+  minio_access_key: "accesskey"
+  minio_secret_key: "secretkey"
 
 boxes:
 - name: "minio-1"
